# SpotiPixFinal1

./: README.md  package-lock.json
spotipix/: .env  package-lock.json  package.json  vite.config.js
spotipix/spotipix-VITE/: package-lock.json
spotipix/src/: .env  index.html  main.js  spotifyAuth.js  style.css  styles.css
spotipix/src-tauri/: .env  Cargo.toml  tauri.conf.json
spotipix/src-tauri/spotipix/: index.html  package-lock.json  package.json
spotipix/src-tauri/src/: lib.rs  main.rs
