[package]
name = "spotipix"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "spotipix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1" }

[dependencies]
tauri = { version = "1", features = ["api-all"] }
tauri-plugin-opener = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
